change font and color for button